完善菜单信息
