# app/model/system/role_menu/role_menu.go
@@ -1,0 +1,7 @@
+package role_menu
+
+//CancelConnectReq 取消关联
+type CancelConnectReq struct {
+	RoleID  int   `p:"roleId"`
+	MenuIDs []int `p:"menuIds"`
+}
