# swagger/swagger.json
@@ -304,7 +304,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/menu_role.CancelConnectReq"
+                            "$ref": "#/definitions/role_menu.CancelConnectReq"
                         }
                     }
                 ],
@@ -1014,7 +1014,7 @@
                 }
             }
         },
-        "menu_role.CancelConnectReq": {
+        "role_menu.CancelConnectReq": {
             "type": "object",
             "properties": {
                 "menuID": {
